いいね骨組み

--- a/public/css/eirai.css
+++ b/public/css/eirai.css
@@ -61,3 +61,15 @@
 .TopMore{
   display: flex;
 }
+
+/*サンプル*/
+
+.SampleImg{
+    max-width: 640;
+    height: auto;
+}
+
+.SampleImg img{
+    width: 100%;
+    aspect-ratio: 640 / 360;
+}
