--- a/public/css/eirai.css
+++ b/public/css/eirai.css
@@ -1,3 +1,81 @@
+/*App*/
+.HeaderNav{
+    z-index: 50;
+    box-sizing: border-box;
+    position: fixed;
+    display: flex;
+    left: 0px;
+    top: 0px;
+    width: 100vw;
+    height: 64px;
+    padding: 0px 16px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, .2);
+    -webkit-box-pack: end;
+    justify-content: flex-end;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.Main{
+    position: relative;
+    /*padding: 64px 0px 0px;*/
+}
+
+.HeaderBody{
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+}
+
+.HeaderLink{
+    display: inline-block;
+    padding-top: 0.32rem;
+    padding-bottom: 0.32rem;
+    margin-right: 1rem;
+    font-size: 30px;
+    line-height: inherit;
+    white-space: nowrap;
+    color: rgba(0, 0, 0, 0.9);
+    font-family: Franklin Gothic;
+}
+
+.HeaderLink:hover{
+    color: rgba(0, 0, 0, 0.7);
+    text-decoration: none;
+}
+
+.HeaderLeft{
+    display: inline-block;
+    margin-right: auto !important;
+    top: 0px;
+    bottom: 0px;
+    left:0px;
+    margin:auto
+}
+
+.HeaderRight{
+    display: inline-block;
+    margin-left: auto !important;
+    top: 0px;
+    bottom: 0px;
+    right:0px;
+    margin:auto
+}
+
+.HeaderLink{
+    display: inline-block;
+    top: 0px;
+    bottom: 0px;
+    right:0px;
+    margin:auto
+}
+
+/*TopPage*/
+
 .samplediv{
   display:inline-block;
 }
@@ -12,11 +90,19 @@
   margin-bottom:20px;
 }
 
+.TopTitle{
+  font-size:32px;
+}
+
 .RankImg {
   width: 320;
   height: 180;
   border-radius: 6px;
   background-color: rgb(255, 255, 255);
+}
+
+.RankBox:hover {
+  opacity: 0.8;
 }
 
 .RankBox{
@@ -62,14 +148,84 @@
   display: flex;
 }
 
-/*サンプル*/
-
-.SampleImg{
-    max-width: 640;
-    height: auto;
+.GrayA {
+  color: #888;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0.375rem 0.75rem;
+  border-radius: 100vh;
+  transition: background-color .2s;
 }
+
+.GrayA:hover {
+  color: #444;
+  background-color: #eee;
+  text-decoration: none;
+}
+
+/*各ページ*/
+
+.PageMargin{
+    padding: 0px 16px;
+    margin: 0px auto;
+    max-width: 1200px;
+    display: flex;
+}
+
+.PageBlank{
+    width: 70%;
+    padding: 6px 6px;
+    border-radius: 6px;
+    background: #fff;
+}
+
+.PageTest{
+    width: 30%;
+    background: #000;
+    height: 500px;
+}
+
+.Page{
+    padding: 16px 16px;
+    width: 100%;
+    font-size: 14px;
+}
+
+/*サンプル*/
 
 .SampleImg img{
     width: 100%;
     aspect-ratio: 640 / 360;
+    border-radius: 6px;
+}
+
+/*ボタン*/
+.BtnBlue {
+  color: #fff;
+  background-color: #3490DC;
+  border-style: none;
+  padding: 0.375rem 0.75rem;
+  border-radius: 100vh;
+  transition: background-color .2s;
+}
+
+.BtnBlue:hover {
+  color: #E6E6E6;
+  background-color: #2F82C6;
+  text-decoration: none;
+}
+
+@media (max-width:768px) {
+  .PageMargin{
+      display: block;
+  }
+
+  .PageBlank{
+      width: 100%;
+  }
+  
+  .PageTest{
+      width: 100%;
+      display: none;
+  }
+
 }
